--- a/harmony/src/index.css
+++ b/harmony/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Harmony";
+  src: url("../public/Harmony.ttf");
+}
+@font-face {
+  font-family: "Dancing";
+  src: url("../public/DancingScript-VariableFont_wght.ttf");
+}
