--- a/harmony/src/index.css
+++ b/harmony/src/index.css
@@ -10,3 +10,11 @@
   font-family: "Dancing";
   src: url("../public/DancingScript-VariableFont_wght.ttf");
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
